kubernetes/apps/components/redmanager/base/redmanager/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmanager
  labels:
    app: redmanager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redmanager
  template:
    metadata:
      labels:
        app: redmanager
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: redmanager
          image: registry.gitlab.com/starfruit6000/redmanager:v1.2.3@sha256:5fc013b18ddc2f0f2b728ed17e9e2c39a1a8d8f78ddda74ff0b3409690c37dd2
          securityContext:
            seccompProfile:
              type: RuntimeDefault
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          volumeMounts:
            - name: redmanager-transmission-shared
              mountPath: /redmanager-transmission-shared
      volumes:
        - name: redmanager-transmission-shared
          persistentVolumeClaim:
            claimName: redmanager-transmission-shared
