kubernetes/apps/components/redmanager/base/redmanager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redmanager
spec:
  type: ClusterIP
  selector:
    app: redmanager
  ports:
    - name: api
      port: 8080
